Add batch latest members endpoint
